--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
     {% if site.twitter.username %}
-      <li><a href="https://twitter.com/{{ site.twitter.username }}"><img src="/images/x-icon.png" alt="X" style="width: 20px; height: 20px;"> X</a></li>
-
+      <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-times-square" aria-hidden="true"></i> X</a></li>
     {% endif %}
     {% if site.facebook.username %}
       <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
