--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,6 @@
 </script>
 
 <!-- For all browsers -->
-<!-- <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
